<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Andrey “Limych” Khrolenok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for&#160;the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

	<string name="app_name">Ruble Rates</string>

	<string name="title_forex">Forex</string>
	<string name="title_official">CB RF</string>
	<string name="title_stock">Stock</string>

	<string name="text_updated">Updated:</string>

	<string name="desc_calculator">Calculator</string>

	<string name="force_update_na">Force update is not yet available</string>
	<string name="update_loaded">The data are updated</string>
	<string name="no_internet_connection">No internet connection</string>


	<!-- Toolbar actions -->
	<string name="action_appstore">App on Google Play</string>
	<string name="action_settings">Settings</string>
	<string name="action_idea_suggest">Suggest an idea</string>
	<string name="action_about">Version</string>

	<string name="tab_rates">Rates</string>


	<!-- Preferences -->
	<!-- Preference categories titles -->
	<string name="pref_title_debug">Debug</string>
	<string name="pref_title_presentation">Data presentation</string>
	<string name="pref_title_updating">Data updating</string>

	<!-- Preference titles and descriptions -->
	<string name="pref_title_device_id">Device ID</string>

	<string name="pref_title_invert_colors">Invert price colors</string>
	<string name="pref_desc_normal_colors">Green for&#160;price growth. Red for&#160;price fall</string>
	<string name="pref_desc_invert_colors">Red for&#160;price growth. Green for&#160;price fall</string>

	<string name="pref_title_long_format">Long numbers</string>
	<string name="pref_desc_long_format">Four decimal digits</string>
	<string name="pref_desc_short_format">Two decimal digits</string>

	<string name="pref_title_wifi_only">WiFi-only updating</string>
	<string name="pref_desc_wifi_only_on">Suspend update until availability WiFI</string>
	<string name="pref_desc_wifi_only_off">Update when connected to any network</string>


	<!-- Dialogs -->
	<string name="about_version">Version</string>
	<string name="about_copyright">©&#160;2015, Andrey “Limych” Khrolenok</string>
	<string name="about_desc_app_logo">Application logo</string>

	<string name="feedback_like">Please help us improve that application. It takes less than a&#160;minute.\n\nDo you like that application?</string>
	<string name="feedback_like_yes">Yes, I like it!</string>
	<string name="feedback_like_no">No</string>
	<string name="feedback_later">Not now</string>
	<string name="feedback_support">Do you need support? Want to tell us what\'s wrong? Tap OK to send us a&#160;report.</string>
	<string name="feedback_recommendation">Please leave your recommendation on the App Store to other people were also able to assess this application.</string>
	<string name="feedback_submit">Yes, sure!</string>
	<string name="feedback_ok">OK</string>
	<string name="feedback_cancel">Cancel</string>
	<string name="feedback_chooser_title">Send mail…</string>


	<!-- Calculator dialog -->
	<string name="desc_paren">Left/Right parenthesis</string>
	<string name="desc_del">Delete</string>
	<string name="desc_mul">Times</string>
	<string name="desc_div">Divide</string>
	<string name="desc_add">Plus</string>
	<string name="desc_sub">Minus</string>
	<string name="desc_perc">Percent</string>
	<string name="error_in_expression">An error in the expression</string>


	<!-- Currency names-->
	<string-array name="stockShortCodes">
		<item>ARS=$</item>
		<item>AUD=$</item>
		<item>AZN=&#x20BC;</item>
		<item>BBD=$</item>
		<item>BGN=лв</item>
		<item>BSD=$</item>
		<item>BWP=P</item>
		<item>BYR=Br</item>
		<item>CAD=$</item>
		<item>CNY=¥</item>
		<item>CUP=&#x20B1;</item>
		<item>CZK=Kč</item>
		<item>EGP=£</item>
		<item>EUR=€</item>
		<item>GBP=£</item>
		<item>HUF=Ft</item>
		<item>ILS=₪</item>
		<item>INR=&#x20B9;</item>
		<item>JPY=¥</item>
		<item>KGS=лв</item>
		<item>KPW=₩</item>
		<item>KRW=₩</item>
		<item>KZT=лв</item>
		<item>MNT=₮</item>
		<item>MYR=RM</item>
		<item>NOK=kr</item>
		<item>NPR=₨</item>
		<item>OMR=﷼</item>
		<item>PKR=₨</item>
		<!--<item>RUB,RUR=₽</item>-->
		<item>RUB,RUR=р.</item>
		<item>TRY=&#x20BA;</item>
		<item>UAH=₴</item>
		<item>USD=$</item>
		<item>UZS=лв</item>
		<item>VEF=Bs</item>
		<item>VND=₫</item>
	</string-array>
	<string-array name="stockNames">
		<item>AED — UAE Dirham</item>
		<item>AFN — Afghani</item>
		<item>ALL — Albanian lek</item>
		<item>AMD — Armenian Dram</item>
		<item>ANG — Antillean Guilder</item>
		<item>ARS — Argentine peso</item>
		<item>AUD — Australian dollar</item>
		<item>AZN — Azerbaijani manat</item>
		<item>BAM — Convertible Mark</item>
		<item>BBD — Barbadian dollar</item>
		<item>BDT — Bangladeshi taka</item>
		<item>BGN — Bulgarian Lev</item>
		<item>BHD — Bahraini dinar</item>
		<item>BIF — Burundi Franc</item>
		<item>BND — Brunei Dollar</item>
		<item>BOB — Boliviano</item>
		<item>BRL — Brazilian real</item>
		<item>BSD — Bahamian Dollar</item>
		<item>BTC — Bitcoin</item>
		<item>BWP — Botswana Pula</item>
		<item>BYR — Belarussian ruble</item>
		<item>BZD — Belize dollar</item>
		<item>CAD — Canadian dollar</item>
		<item>CHF — Swiss franc</item>
		<item>CLP — Chilean peso</item>
		<item>CNY — Chinese yuan</item>
		<item>COP — Colombian peso</item>
		<item>CRC — Costa Rican Colon</item>
		<item>CUP — Cuban peso</item>
		<item>CVE — Cape Verde Escudo</item>
		<item>CZK — Czech koruna</item>
		<item>DJF — Djibouti Franc</item>
		<item>DKK — Danish krone</item>
		<item>DOP — Dominican peso</item>
		<item>DZD — Algerian Dinar</item>
		<item>EGP — Egyptian pound</item>
		<item>ETB — Ethiopian Birr</item>
		<item>EUR — Euro</item>
		<item>FJD — Fiji Dollar</item>
		<item>GBP — British pound</item>
		<item>GEL — Georgian lari</item>
		<item>GHS — Ghana Cedi</item>
		<item>GMD — Gambian Dalasi</item>
		<item>GNF — Guinea Franc</item>
		<item>GTQ — Guatemalan quetzal</item>
		<item>HKD — Hong Kong Dollar</item>
		<item>HNL — Honduran Lempira</item>
		<item>HRK — Croatian kuna</item>
		<item>HTG — Haiti Gourde</item>
		<item>HUF — Hungarian forint</item>
		<item>IDR — Indonesian rupiah</item>
		<item>ILS — Israeli Shekel</item>
		<item>INR — Indian rupee</item>
		<item>IQD — Iraqi dinar</item>
		<item>IRR — Iranian Rial</item>
		<item>ISK — Iceland Krona</item>
		<item>JMD — Jamaican dollar</item>
		<item>JOD — Jordanian Dinar</item>
		<item>JPY — Japanese Yen</item>
		<item>KES — Kenyan shilling</item>
		<item>KHR — Cambodian Riel</item>
		<item>KMF — Comorian Franc</item>
		<item>KRW — South Korean won</item>
		<item>KWD — Kuwaiti Dinar</item>
		<item>KYD — Cayman Islands Dollar</item>
		<item>KZT — Kazakh tenge</item>
		<item>LAK — Lao Kip</item>
		<item>LBP — Lebanese Pound</item>
		<item>LKR — Sri Lanka Rupee</item>
		<item>LSL — Loti Lesotho</item>
		<item>LTC — Laytkoin</item>
		<item>LTL — Lithuanian litas</item>
		<item>LYD — Libyan dinar</item>
		<item>MAD — Moroccan dirham</item>
		<item>MDL — Moldovan leu</item>
		<item>MGA — Malagasy Ariary</item>
		<item>MKD — Mden</item>
		<item>MMK — Myanmar kyat</item>
		<item>MOP — MOP</item>
		<item>MRO — Mauritania Ougulya</item>
		<item>MUR — Mauritius Rupee</item>
		<item>MVR — Maldives Rufiyaa</item>
		<item>MWK — Malawi Kwacha</item>
		<item>MXN — Mexican peso</item>
		<item>MYR — Malaysian Ringgit</item>
		<item>MZN — Mozambique Metical</item>
		<item>NAD — Namibian Dollar</item>
		<item>NGN — Nigerian naira</item>
		<item>NIO — Nicaraguan Córdoba</item>
		<item>NOK — Norwegian Krone</item>
		<item>NPR — Nepalese Rupee</item>
		<item>NZD — New Zealand dollar</item>
		<item>OMR — Omani Rial</item>
		<item>PAB — Panamanian Balboa</item>
		<item>PEN — Peruvian Nuevo Sol</item>
		<item>PGK — Kina Papua-New Guinea</item>
		<item>PHP — Philippine peso</item>
		<item>PKR — Pakistan Rupee</item>
		<item>PLN — Polish zloty</item>
		<item>PYG — Paraguayan Guarani</item>
		<item>QAR — Qatari Riyal</item>
		<item>RON — Romanian leu</item>
		<item>RSD — Serbian dinar</item>
		<item>RUB,RUR — Russian ruble</item>
		<item>RWF — Rwandan franc</item>
		<item>SAR — Saudi riyal</item>
		<item>SCR — Seychelles Rupee</item>
		<item>SDG — Sudanese Pound</item>
		<item>SEK — Swedish Krona</item>
		<item>SGD — Singapore dollar</item>
		<item>SOS — Somali shilling</item>
		<item>STD — Good Sao Tome and Principe</item>
		<item>SVC — El Salvador Colon</item>
		<item>SYP — Syrian Pound</item>
		<item>SZL — Swazi Lilangeni</item>
		<item>THB — Thai baht</item>
		<item>TND — Tunisian Dinar</item>
		<item>TRY — Turkish lira</item>
		<item>TTD — Trinidad and Tobago Dollar</item>
		<item>TWD — Taiwan Dollar</item>
		<item>TZS — Tanzanian shilling</item>
		<item>UAH — Ukrainian hryvnia</item>
		<item>UGX — Uganda shilling</item>
		<item>USD — US Dollar</item>
		<item>UYU — Uruguayan peso</item>
		<item>UZS — Uzbekistan Sum</item>
		<item>VEF — Venezuelan Bolivar</item>
		<item>VND — Vietnamese Dong</item>
		<item>VUV — Vanuatu wool</item>
		<item>XAF — CFA Franc BEAC</item>
		<item>XCD — East Caribbean Dollar</item>
		<item>XOF — CFA Franc BCEAO</item>
		<item>XPF — French Pacific Franc</item>
		<item>YER — Yemeni Rial</item>
		<item>ZAR — South African rand</item>
		<item>ZMK — Zambian Kwacha</item>
	</string-array>
</resources>
