<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Andrey “Limych” Khrolenok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/pref_title_presentation">

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="long_format"
			android:summaryOff="@string/pref_desc_short_format"
			android:summaryOn="@string/pref_desc_long_format"
			android:title="@string/pref_title_long_format"/>

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="invert_colors"
			android:summaryOff="@string/pref_desc_normal_colors"
			android:summaryOn="@string/pref_desc_invert_colors"
			android:title="@string/pref_title_invert_colors"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_title_updating">

		<CheckBoxPreference
			android:defaultValue="false"
			android:key="wifi_only"
			android:summaryOff="@string/pref_desc_wifi_only_off"
			android:summaryOn="@string/pref_desc_wifi_only_on"
			android:title="@string/pref_title_wifi_only"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:key="category_debug"
		android:title="@string/pref_title_debug">

		<Preference
			android:key="device_id"
			android:title="@string/pref_title_device_id"/>

	</PreferenceCategory>

</PreferenceScreen>