<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Andrey “Limych” Khrolenok
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:padding="?attr/dialogPreferredPadding">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		android:layout_marginEnd="10dp"
		android:layout_marginRight="10dp"
		android:contentDescription="@string/about_desc_app_logo"
		android:src="@mipmap/ic_launcher"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textStyle="bold"/>

		<TextView
			android:id="@+id/app_version"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_version"
			android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/about_copyright"
			android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
	</LinearLayout>
</LinearLayout>
